# parosol-py

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-linux-wheel.yml  build-wheels.yml  publish-from-run.yml  tests.yml
.superpowers/sdd/: task-7-report.md
.superpowers/sdd/keaveny/: final-fix-report.md  task-4-report.md  task-5-6-report.md  task-7-report.md
docs/: analysis-profiles.md  gpu-backend-roadmap.md  legacy-feature-map.md  n88-reference-verification.md  nonlinear.md
docs/benchmarks/: torch-backend-mps-smoke.md
docs/superpowers/plans/: 2026-05-28-parosol-py-implementation.md  2026-05-31-fea-api-profiles-implementation.md  2026-05-31-sed-reference-load-cases.md  2026-06-27-parosol-workflow-stabilization.md
docs/superpowers/specs/: 2026-05-28-parosol-py-design.md  2026-05-31-fea-api-profiles-design.md  2026-06-01-anatomic-fe-modeling-design.md  2026-06-27-parosol-workflow-stabilization-design.md
scripts/: benchmark_torch_backend.py  install_linux_wheel_deps.sh  install_prebuilt.py  install_windows_wheel_deps.ps1  local_check.py  run_ogo_parity.py  stage_mpi_runtime.py  verify_packaged_mpi.py  workflow_baseline.py
src/parosol_native/: CMakeLists.txt
src/parosol_native/src/: AsciiImage.cpp  AsciiImageMirrored.cpp  BaseGrid.h  CPULayout.h  GReader.cpp  GReader.hpp  GWriter.cpp  GenericMatrix.h  HDF5Image.cpp  HDF5Image.h  HDF5Printer.h  MlCycle.h  MlOctreeGrid.h  NonlinearMaterial.cpp  NonlinearMaterial.h  NonlinearProblem.h  OctreeGrid.h  OctreeNode.h  PCGSolver.cpp  PCGSolver.h  Postprocessing.h  Problem.h  Solver.h  StiffnessMatrix.h  Timing.h  est_ev.cpp  fem.cpp  fem.h  main.cpp  tri_eig.h
src/parosol_py/: __init__.py  _wheel_smoke.py  api.py  batch.py  boundary_conditions.py  bundle.py  cli.py  config.py  config_templates.py  core.py  diagnostics.py  faim_validation.py  field_export.py  hdf5_io.py  images.py  load_cases.py  load_history.py  materials.py  native_bench.py  native_layout.py  nodesets.py  nonlinear.py  nonlinear_workflow.py  parity.py  paths.py  profiles.py  reference_comparison.py  reference_fixtures.py  reference_geometry.py  reference_masks.py  reference_metrics.py  reference_validation.py  reference_visuals.py  reports.py  results.py  runner.py  set_export.py  surfaces.py  validation.py  visualization.py  (+5 more)
src/parosol_py/config_templates/: default.yaml
src/parosol_py/config_templates/profiles/: batch.yaml  bending_z.yaml  coarse_preview.yaml  constrained_axial_z.yaml  debug.yaml  debug_sets.yaml  density_power.yaml  direct_mechanics_manifest.yaml  faim_compat.yaml  hip-batch.yaml  legacy_axial.yaml  load_history_3.yaml  load_history_6.yaml  progressive_loading_manifest.yaml  proximal_femur.yaml  proximal_femur_sideways_fall.yaml  shear_zx.yaml  shear_zy.yaml  smart_bone_compression_z.yaml  spine-batch.yaml  standard_fields.yaml  standard_mechanics_fields.yaml  torsion_z.yaml  vertebra.yaml  xtremecti.yaml  xtremecti_materials.yaml  xtremectii.yaml  xtremectii_materials.yaml
src/parosol_py/modeling/: __init__.py  alignment.py  builder.py  common.py  femur.py  io.py  spine.py  types.py  workflow_replay.py
src/parosol_py/workflows/: XtremeCTI.parosol-workflow  XtremeCTII.parosol-workflow  ct-hip-sideways-fall-left.parosol-workflow  ct-hip-sideways-fall-right.parosol-workflow  ct-hip-sideways-fall.parosol-workflow  ct-spine-compression.parosol-workflow  hip-sideways-fall-left-nonlinear.parosol-workflow  hip-sideways-fall-left.parosol-workflow  hip-sideways-fall-right-nonlinear.parosol-workflow  hip-sideways-fall-right.parosol-workflow  load_history_3.parosol-workflow  load_history_6.parosol-workflow  spine-compression-nonlinear.parosol-workflow  spine-compression.parosol-workflow  vertebra.parosol-workflow
src/parosol_torch/: __init__.py  backend.py  contract.py  elasticity.py  prototype.py  registry.py
tests/: test_alignment_reference_points.py  test_api.py  test_batch.py  test_boundary_conditions.py  test_bundle.py  test_config_cli.py  test_config_templates.py  test_core.py  test_diagnostics.py  test_faim_reference.py  test_faim_validation.py  test_fea_reference_lockdown.py  test_field_export.py  test_hdf5_io.py  test_images.py  test_keaveny_nonlinear_materials.py  test_load_cases.py  test_load_history.py  test_materials.py  test_modeling.py  test_native_bench_config.py  test_native_layout.py  test_nodesets.py  test_nonlinear_config.py  test_nonlinear_materials.py  test_nonlinear_solver_smoke.py  test_nonlinear_workflow.py  test_packaging.py  test_parity.py  test_parosol_torch.py  test_profiles.py  test_real_world_field_data.py  test_real_world_reference_metrics.py  test_reference_metrics.py  test_reference_validation.py  test_reports.py  test_results.py  test_runner.py  test_set_export.py  test_solver_smoke.py  (+9 more)
tests/fixtures/: builtin_workflow_baseline_locked.json
tests/fixtures/faim/: SAMPLE_HOM_LS_analysis.txt
tests/fixtures/fea_reference/: README.md  core_metric_lock.csv  core_metric_lock.json
tests/fixtures/fea_reference/femur_left_mini/: density.npz  equivalence.json  fixture.json  labels.npz  reference.json  replay.json  visual_report.html
tests/fixtures/fea_reference/field_data/: manifest.json
tests/fixtures/fea_reference/vertebra_l4_mini/: density.npz  equivalence.json  fixture.json  labels.npz  reference.json  replay.json  visual_report.html
tests/fixtures/fea_reference/xtremect_tibia_mini/: density.npz  equivalence.json  fixture.json  labels.npz  reference.json  replay.json  visual_report.html
tests/fixtures/reference/: SAMPLE_HOM_LS.AIM  SAMPLE_HOM_LS_pistoia.txt
tests/fixtures/trab1240/: material_table.yaml  reference.json  reference_sed.npz  trab1240_labels.npz
