[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[project]
name = "parosol-py"
version = "0.1.0"
description = "Python package and API wrapper for the ParOSol micro-FE solver"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-2.0-or-later" }
authors = [{ name = "Matthias Walle" }]
dependencies = [
  "numpy>=1.24",
  "h5py>=3.10",
  "SimpleITK>=2.3",
  "aimio-py>=0.1.1",
  "PyYAML>=6",
]

[project.scripts]
parosol = "parosol_py.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "build>=1",
  "cibuildwheel>=2.19",
  "twine>=5",
]

[tool.scikit-build]
cmake.version = ">=3.18"
wheel.packages = ["src/parosol_py"]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux_* *-manylinux_i686 *-win32"
test-command = "python -c \"from parosol_py.runner import packaged_executable; p=packaged_executable(); print(p); assert p.exists()\""
build-verbosity = 1

[tool.cibuildwheel.linux]
archs = ["x86_64"]
before-all = "if command -v yum >/dev/null 2>&1; then yum install -y eigen3-devel hdf5-devel openmpi-devel; elif command -v dnf >/dev/null 2>&1; then dnf install -y eigen3-devel hdf5-devel openmpi-devel; elif command -v apt-get >/dev/null 2>&1; then apt-get update && apt-get install -y libeigen3-dev libhdf5-dev libopenmpi-dev openmpi-bin; else echo 'No supported package manager found for native dependencies' && exit 1; fi"
environment = { PATH="/usr/lib64/openmpi/bin:/usr/lib/openmpi/bin:$PATH", LD_LIBRARY_PATH="/usr/lib64/openmpi/lib:/usr/lib/openmpi/lib:$LD_LIBRARY_PATH" }

[tool.cibuildwheel.macos]
before-all = "brew install eigen hdf5 open-mpi"
environment = { CMAKE_PREFIX_PATH="$(brew --prefix eigen):$(brew --prefix hdf5):$(brew --prefix open-mpi)", MACOSX_DEPLOYMENT_TARGET="15.0" }
repair-wheel-command = "python -m pip install delocate && delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}"

[tool.cibuildwheel.windows]
archs = ["AMD64"]
before-all = "powershell -NoProfile -ExecutionPolicy Bypass -Command \"$ErrorActionPreference = 'Stop'; winget install --id Microsoft.msmpi --exact --silent --accept-package-agreements --accept-source-agreements; if (-not (Test-Path 'C:\\Program Files\\Microsoft MPI\\Bin\\mpiexec.exe')) { throw 'MS-MPI redistributable install did not produce mpiexec.exe' }; if (-not (Test-Path 'C:\\vcpkg')) { git clone --depth 1 https://github.com/microsoft/vcpkg C:\\vcpkg }; & C:\\vcpkg\\bootstrap-vcpkg.bat; & C:\\vcpkg\\vcpkg.exe install eigen3:x64-windows hdf5[cpp]:x64-windows msmpi:x64-windows --disable-metrics\""
environment = { CMAKE_TOOLCHAIN_FILE="C:/vcpkg/scripts/buildsystems/vcpkg.cmake", VCPKG_TARGET_TRIPLET="x64-windows" }
repair-wheel-command = "python -m pip install delvewheel && delvewheel repair -w {dest_dir} {wheel}"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
