[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[project]
name = "parosol-py"
version = "0.1.19"
description = "Python package and API wrapper for the ParOSol micro-FE solver"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-2.0-or-later" }
authors = [{ name = "Matthias Walle" }]
maintainers = [{ name = "Matthias Walle" }]
keywords = ["finite-element-analysis", "bone", "hr-pqct", "parosol"]
dependencies = [
  "numpy>=1.24",
  "h5py>=3.10",
  "SimpleITK>=2.3",
  "aimio-py>=0.1.1",
  "PyYAML>=6",
  "matplotlib>=3.8",
  "scipy>=1.11",
]

[project.scripts]
parosol = "parosol_py.cli:main"

[project.urls]
Repository = "https://github.com/wallematthias/parosol-py"
Native-ParOSol-License = "https://github.com/wallematthias/parosol-py/blob/main/src/parosol_native/LICENSE"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "build>=1",
  "cibuildwheel>=2.19",
  "twine>=5",
]

[tool.scikit-build]
cmake.version = ">=3.18"
wheel.packages = ["src/parosol_py"]

[tool.cibuildwheel]
build = "cp3??-*"
skip = "cp3??t-* *-musllinux_* *-manylinux_i686 *-win32"
before-build = "python scripts/stage_mpi_runtime.py && python scripts/verify_packaged_mpi.py"
test-command = "python -m parosol_py._wheel_smoke"
build-verbosity = 1

[tool.cibuildwheel.linux]
archs = ["x86_64"]
before-all = "bash scripts/install_linux_wheel_deps.sh"
environment = { PAROSOL_OPENMPI_PREFIX="/usr/lib64/openmpi", CMAKE_PREFIX_PATH="/usr;/usr/lib64/openmpi", CMAKE_ARGS="-DMPI_CXX_COMPILER=/usr/lib64/openmpi/bin/mpicxx" }
repair-wheel-command = "auditwheel repair --plat manylinux_2_28_x86_64 --exclude libmpi.so.40 --exclude libmpi_cxx.so.40 --exclude libopen-rte.so.40 --exclude libopen-pal.so.40 --exclude libpmix.so.2 --exclude libevent_core-2.1.so.7 --exclude libevent_pthreads-2.1.so.7 --exclude libevent-2.1.so.7 --exclude libhwloc.so.15 -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
before-all = "brew install eigen hdf5 open-mpi"
environment = { CMAKE_PREFIX_PATH="$(brew --prefix eigen):$(brew --prefix hdf5):$(brew --prefix open-mpi)", MACOSX_DEPLOYMENT_TARGET="15.0" }
repair-wheel-command = "python -m pip install delocate && delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}"

[tool.cibuildwheel.windows]
archs = ["AMD64"]
before-all = "powershell -NoProfile -ExecutionPolicy Bypass -File scripts/install_windows_wheel_deps.ps1"
environment = { CMAKE_TOOLCHAIN_FILE="C:/vcpkg/scripts/buildsystems/vcpkg.cmake", VCPKG_TARGET_TRIPLET="x64-windows" }
repair-wheel-command = "python -m pip install delvewheel && delvewheel repair -w {dest_dir} {wheel}"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
